<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    tools:context=".verifyOtp">


    <ImageView
        android:id="@+id/phone_number_logo"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="25dp"
        android:src="@drawable/front" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone_number_logo"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="false"
        android:layout_centerVertical="false"
        android:layout_marginTop="25dp"
        android:text="@string/otpenter"

        android:textColor="@color/colorPrimaryDark"
        android:textSize="30dp"
        android:textStyle="bold" />



    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcomeText"
        android:layout_marginTop="35dp"

        android:id="@+id/phoneText"
        >

        <EditText
            android:id="@+id/user_otp_x"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/otpr"
            android:inputType="number"
            android:textColor="@color/colorPrimaryDark"

            android:textColorHint="@color/colorPrimary"

            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/otpSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phoneText"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        android:layout_marginTop="25dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/submit"
        android:textColor="@color/background_material_light" />
</RelativeLayout>

